--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
+    "baseline-browser-mapping": "^2.9.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
