--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,13 @@
             "in a real-world scenario, use a proper web-server, such as Nginx, Caddy, Apache, etc."
         ],
         "build": [
+            "./setup.sh",
+            "./notesToDb --vault-path /workspaces/Perlite-Vite-React/perlite/Whendeez",
             "npm run build"
         ],
         "start": [
+            "./setup.sh",
+            "./notesToDb --vault-path /workspaces/Perlite-Vite-React/perlite/Whendeez",
             "npx concurrently \"composer start:server\" \"composer start:vite\" --names \"PHP,Vite\" --kill-others"
         ],
         "start:server": "@php -S localhost:8001 -t public perlite/index.php",
