--- a/perlite/composer.json
+++ b/perlite/composer.json
@@ -53,7 +53,8 @@
     },
     "require": {
         "erusev/parsedown": "^1.7.4",
-        "mindplay/php-vite": "^1.0"
+        "mindplay/php-vite": "^1.0",
+        "vlucas/phpdotenv": "^5.6"
     }
 
 }
